[package]
name = "oximedia-effects"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Professional audio effects suite for OxiMedia"
keywords = ["audio", "effects", "reverb", "dsp", "multimedia"]
categories = ["multimedia::audio", "multimedia"]
readme = "README.md"

[lints]
workspace = true

[features]
fundsp = ["dep:fundsp"]

[dependencies]
oximedia-core.workspace = true
oximedia-audio.workspace = true
thiserror.workspace = true
oxifft = { workspace = true }
rubato = "2.0"
scirs2-core = { workspace = true }
fundsp = { version = "0.23", optional = true}

[dev-dependencies]
