[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oximedia"
version = "0.2.1"
description = "Python bindings for OxiMedia - Royalty-free multimedia processing library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "COOLJAPAN OU (Team Kitasan)" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "oximedia.oximedia"
python-source = "python"
include = [
    "python/oximedia/*.pyi",
    "python/oximedia/py.typed",
    "python/oximedia/__init__.py",
    "python/oximedia/__main__.py",
]
