[package]
name = "oximedia-vaapi-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FFI bindings to libva (Video Acceleration API). Linux only."
keywords = ["vaapi", "ffi", "intel", "amd", "linux"]
categories = ["external-ffi-bindings", "multimedia"]
links = "va-vaapi-sys"

[lib]
name = "oximedia_vaapi_sys"

[features]
# Off by default — the workspace's "one cargo add, no system deps"
# promise (root README) means we must not probe `pkg-config` at
# build time unless the user opts in.  Enabling this feature lets
# the build script discover system-installed libva via
# `pkg-config --cflags --libs libva libva-drm libva-x11`.
pkg-config = ["dep:pkg-config"]

[build-dependencies]
bindgen = { workspace = true }
pkg-config = { workspace = true, optional = true }

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
non_upper_case_globals = "allow"

[lints.clippy]
all = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
