[package]
name = "oximedia-vpl-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FFI bindings to Intel oneVPL (Video Processing Library, formerly Media SDK / QSV). Linux + Windows."
keywords = ["onevpl", "ffi", "qsv", "intel", "quicksync"]
categories = ["external-ffi-bindings", "multimedia"]
links = "vpl-vpl-sys"

[lib]
name = "oximedia_vpl_sys"

[features]
# Off by default — the workspace's "one cargo add, no system deps"
# promise (root README) means we must not probe `pkg-config` at
# build time unless the user opts in.  Enabling this feature lets
# the build script discover system-installed oneVPL via
# `pkg-config --cflags --libs vpl`.
pkg-config = ["dep:pkg-config"]

[build-dependencies]
bindgen = { workspace = true }
pkg-config = { workspace = true, optional = true }

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
non_upper_case_globals = "allow"

[lints.clippy]
all = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
