[package]
name = "oximedia-vpl-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FFI bindings to Intel oneVPL (Video Processing Library, formerly Media SDK / QSV). Linux + Windows."
keywords = ["onevpl", "ffi", "qsv", "intel", "quicksync"]
categories = ["external-ffi-bindings", "multimedia"]
links = "vpl-vpl-sys"

[lib]
name = "oximedia_vpl_sys"

[build-dependencies]
bindgen = { workspace = true }

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
non_upper_case_globals = "allow"

[lints.clippy]
all = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
