[package]
name = "oximedia-vtb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Safe Rust wrappers over Apple VideoToolbox for hardware H.264/HEVC encode and decode (macOS/iOS)"
keywords = ["videotoolbox", "h264", "hevc", "hardware", "video"]
categories = ["multimedia", "multimedia::video"]

[lib]
name = "oximedia_vtb"

[dependencies]
oximedia-core = { workspace = true }
oximedia-codec = { workspace = true }
oximedia-vtb-sys = { path = "../oximedia-vtb-sys" }
thiserror = { workspace = true }

[lints.rust]
# Safe wrappers necessarily contain `unsafe` blocks around FFI calls.
unsafe_code = "allow"
missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_safety_doc = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
uninlined_format_args = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
doc_markdown = "allow"
ptr_as_ptr = "allow"
ref_as_ptr = "allow"
